Update metadata strings for 1.5

--- a/fastlane/metadata/de-DE/release_notes.txt
+++ b/fastlane/metadata/de-DE/release_notes.txt
@@ -1,4 +1,3 @@
-- Rufe den Bildschirm mit den Bestelldetails auf, um den Status einer Bestellung manuell zu ändern oder die Versandverfolgung anzuzeigen.
-- Wir bieten jetzt umfassende Unterstützung für individuelle Bestellstatusbezeichnungen und zeigen diese korrekt an.
-- Du kannst jetzt nach individuellem Bestellstatus filtern.
-- RTL-Sprachunterstützung wurde verbessert, wobei der grafische Komponentenwechsel besser verarbeitet wird.
+In dieser Version dreht sich alles um Fehlerbehebungen und Verbesserungen:
+– In den Bestelldetails wird der Bestellstatus jetzt bei „Pull-to-Refresh“ aktualisiert.
+– Auf verschiedenen Seiten wurden einige kleinere UI-Verbesserungen durchgeführt.
