--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,4 +1,3 @@
-- Buka layar Detail Pesanan untuk mengubah status pesanan secara manual atau melihat pelacakan pengiriman.
-- Kini kami mendukung penuh dan menampilkan label status pesanan kustom dengan benar.
-- Kini Anda dapat menyaring menurut status pesanan kustom.
-- Dukungan bahasa RTL telah ditingkatkan, dengan penanganan tampilan komponen grafis yang lebih baik.
+Versi ini penuh dengan perbaikan dan penyempurnaan:
+– Pada Detail pesanan, status pesanan kini disegarkan lewat tindakan tarik-untuk-segarkan.
+– Beberapa penyempurnaan UI kecil telah dilakukan di berbagai layar.
