--- a/fastlane/metadata/ja/release_notes.txt
+++ b/fastlane/metadata/ja/release_notes.txt
@@ -1,4 +1,3 @@
-- 注文詳細画面から注文のステータスを手動で変更したり、荷物の追跡を表示したりできるようになりました。
-- カスタム注文ステータスラベルを完全にサポートし、正しく表示できるようになりました。
-- カスタム注文ステータスでフィルターできるようになりました。
-- 右から左へ記述する言語のサポートが強化され、グラフィックコンポーネントの反転への対応が容易になりました。
+このバージョンでは、次の修正と改良が行われました。
+- 「注文の詳細」で、注文状況が「プルして更新」で更新されるようになりました。
+- さまざまな画面で UI の小さな改良が行われました。
