--- a/fastlane/metadata/ru/release_notes.txt
+++ b/fastlane/metadata/ru/release_notes.txt
@@ -1,4 +1,3 @@
-— Откройте информацию о заказе, чтобы вручную поменять статус заказа или проверить отслеживание посылки.
-— Полная поддержка и правильное отображение меток настраиваемых статусов заказа.
-— Вы можете настроить фильтрацию по настраиваемым статусам заказов.
-— Улучшена поддержка языков с написанием справа налево, усовершенствовано переворачивание графических элементов.
+В этой версии много исправлений и усовершенствований:
+— Теперь статус заказа в деталях заказа обновляется касанием экрана.
+— Несколько небольших усовершенствований интерфейса на различных экранах.
