--- a/fastlane/metadata/ko/release_notes.txt
+++ b/fastlane/metadata/ko/release_notes.txt
@@ -1,4 +1,3 @@
-- 주문 정보 화면을 방문하여 주문 상태를 수동으로 변경하거나 배송 추적을 확인합니다.
-- 이제 사용자 정의 주문 상태 레이블을 완전히 지원하고 올바르게 표시합니다.
-- 사용자 정의 주문 상태별로 필터링할 수 있습니다.
-- RTL 언어 지원이 개선되어 그래픽 구성 요소 뒤집기를 더 잘 처리합니다.
+이 버전은 수정 및 개선 사항에 대한 것입니다.
+- 주문 정보에서 끌어당겨 새로 고칠 때 주문 상태가 새로 고쳐집니다.
+- 다른 화면에서 일부 UI가 약간 개선되었습니다.
