--- a/fastlane/metadata/zh-Hans/release_notes.txt
+++ b/fastlane/metadata/zh-Hans/release_notes.txt
@@ -1,4 +1,3 @@
-- 访问“订单详细信息”屏幕，手动更改订单状态或查看配送跟踪。
-- 我们现在完全支持并正确显示自定义订单状态标签。
-- 您现在可以根据自定义订单状态进行筛选。
-- RTL 语言支持已得到改进，可以更好地处理图形组件翻转情况。
+此版本包含了各种问题修复和改进功能：
+– 在“订单详细信息”中，订单状态会在下拉刷新后立即刷新。
+– 在不同屏幕中完成了一些小的 UI 改进。
